--- a/nereidProject/indexPage.html
+++ b/nereidProject/indexPage.html
@@ -48,6 +48,10 @@
         .addAlgorithmBoard {
             display: none;
         }
+
+        .uploadImplementationBoard {
+            display: none;
+        }
     </style>
 </head>
 
@@ -79,34 +83,34 @@
         <div class="row mb-3">
             <div id="box" class="col-md-4 offset-md-4"></div>
         </div>
-        <!----------------------------------------- munue1 子节点-------------------------------------------->
-        <div id="menue1" class="list-group col-md-2 hiddenElem">
+        <!----------------------------------------- menue1 子节点-------------------------------------------->
+        <div id="menue1" class="list-group col-md-2">
             <button type="button" class="addSubClassification list-group-item list-group-item-action"
                 aria-current="true">
                 Add sub Classification
             </button>
-            <button type="button" id="1" class="addAlgorithmButton list-group-item list-group-item-action">
+            <button type="button" class="addAlgorithmButton list-group-item list-group-item-action">
                 Add Algorithm
             </button>
+            <button type="button" class="list-group-item list-group-item-action" disabled>...</button>
             <!-- <button type="button" class="list-group-item list-group-item-action">delete classification</button> -->
         </div>
-        <!----------------------------------------- munue2 ---------------- ---------------------------->
-        <div id="menue2" class="list-group col-md-2 hiddenElem">
-            <button type="button" class="addSubClassification list-group-item list-group-item-action"
+
+        <!------------------------------------- menue2 添加implementation ------------------>
+        <div id="menue2" class="list-group col-md-2">
+            <button type="button" class="uploadImplementationButton list-group-item list-group-item-action"
                 aria-current="true">
-                Add sub classification
+                Add an Implementation
             </button>
             <button type="button" class="list-group-item list-group-item-action" disabled>...</button>
-            <!-- <button type="button" class="list-group-item list-group-item-action">add alogithm</button>
-            <button type="button" class="list-group-item list-group-item-action " disable>upload implementation</button> -->
         </div>
 
         <!-------------------------------------- 创建classification --------------------------------------->
         <div
-            class="addClassificationBoard hiddenElem shadow p-3 mb-5 bg-body rounded position-absolute top-50 start-50 translate-middle col-md-3">
+            class="addClassificationBoard shadow p-3 mb-5 bg-body rounded position-absolute top-50 start-50 translate-middle col-md-3">
             <form name="addTopClassification">
                 <div class="mb-3">
-                    <p class="text-center fw-bold">Add Classification</p>
+                    <p class="text-center fw-bold">Add Top Classification</p>
                 </div>
                 <div class="mb-3">
                     <label for="inputNewClassificationName" class="form-label">New Top Classification Name</label>
@@ -121,10 +125,10 @@
             </form>
         </div>
         <div
-            class="addClassificationBoard1 hiddenElem shadow p-3 mb-5 bg-body rounded position-absolute top-50 start-50 translate-middle col-md-3">
+            class="addClassificationBoard1 shadow p-3 mb-5 bg-body rounded position-absolute top-50 start-50 translate-middle col-md-3">
             <form name="addSubClassification">
                 <div class="mb-3">
-                    <p class="text-center fw-bold">Add Classification</p>
+                    <p class="text-center fw-bold">Add Sub Classification</p>
                 </div>
                 <div class="mb-3">
                     <label for="inputNewSubClassificationName" class="form-label">New Sub Classification Name</label>
@@ -161,7 +165,29 @@
                     <button type="button" class="addAlgoConcel btn btn-secondary">Concel</button>
                 </div>
             </form>
-
+        </div>
+        <!------------------------------------------ 创建implementation ------------------------------------------>
+        <div
+            class="uploadImplementationBoard shadow p-3 mb-5 bg-body rounded position-absolute top-50 start-50 translate-middle col-md-8">
+            <form name="uploadImplementation">
+                <div class="mb-3">
+                    <p class="text-center fw-bold">Add Implementation</p>
+                </div>
+                <div class="mb-3">
+                    <label for="inputNewImplementationLanguage" class="form-label">Code Language</label>
+                    <input name="arg1" type="text" class="form-control" id="inputNewImplementationLanguage"
+                        placeholder="Enter language">
+                </div>
+                <div class="mb-3">
+                    <label for="inputNewImplementationContent" class="form-label">Code Content</label>
+                    <textarea name="arg2" type="text" style="height: 300px" class="form-control"
+                        id="inputNewImplementationContent" placeholder="Enter your code"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button type="button" class="addImplementationSubmit btn btn-primary">Submit</button>
+                    <button type="button" class="addImplementationConcel btn btn-secondary">Concel</button>
+                </div>
+            </form>
         </div>
 
 
